# QtGame

./: .gitignore  CMakeLists.txt  README.md
include/: GameConfig.h  GameEngine.h  GameWindow.h  Item.h  Player.h  Vector2D.h  Weapon.h
src/: GameEngine.cpp  GameWindow.cpp  Item.cpp  Player.cpp  Vector2D.cpp  Weapon.cpp  main.cpp
